
Changelog
=========

2018.4.10 (unreleased)
----------------------

- Bump ftw.solr to 2.3.1 to get reindexObjectSecurity fix. [lgraf]


2018.4.9 (2018-11-06)
---------------------

- Fix favourite edit action and display pencil. [deiferni]
- Disable buttons during save request in sharing form and improve error handling. [phgross]


2018.4.8 (2018-10-19)
---------------------

- Sharing form: do not show search results multiple times. [phgross]
- Sharing form: fix removal of all role assignments. [phgross]
- Fix parent reference number fetching for repository roots. [Rotonen]
- Fix sharing-form local_roles inheritance fallback and skip it for administators and managers. [phgross]


2018.4.7 (2018-10-05)
---------------------

- Revoke temporary roles also when closing direct-execution tasks. [phgross]


2018.4.6 (2018-10-01)
---------------------

- Fix bumblebee overlay link for not yet created initial version. [phgross]
- Only allow adding meeting templates, when meeting feature is enabled. [phgross]
- Ignore Tika exceptions during indexing in Solr. [buchi]


2018.4.5 (2018-09-24)
---------------------

- Fix task path queries for oracle backends. [phgross]
- Fix activity queries for oracle backends. [phgross]
- Split search terms at non-alphanumeric characters. [buchi]
- Bump Lucene version used in Solr to 7.3.1. [buchi]


2018.4.4 (2018-09-17)
---------------------

- Fix groubmembers overlay for groupids with spaces. [phgross]
- Add missing mimetype for wmf files. [phgross]
- Fix solr checked-in indexing problems. [phgross]
- Fix tree portlet header styling for IE11. [Kevin Bieri]
- Fix batching links on the solr search. [phgross]
- Register bmp as editable by officeconnector. [phgross]
- Fix global scoped "show more" links for SOLR livesearch [Rotonen]


2018.4.3 (2018-09-04)
---------------------

- Scale down size for logo wrapper, to have more space for personal menues. [phgross]
- Fix an encoding issue in an upgrade by no using model code. [deiferni]